# diffgpt

./: .gitignore  CLAUDE.md  README.md  flake.nix  go.mod  go.sum  main.go  makefile  pyproject.toml
.github/workflows/: release.yml
cmd/: learn.go  root.go
internal/config/: config.go  config_test.go
internal/git/: git.go
internal/llm/: client.go  client_test.go
src/diffgpt/: __init__.py
